explorer: fix contextmenu on iOS

--- a/src/frontend/projects/explorer/explorer.css
+++ b/src/frontend/projects/explorer/explorer.css
@@ -5,6 +5,8 @@ p {
 a {
     text-decoration: none;
     color: white;
+    -webkit-touch-callout: none;
+    user-select: none;
 }
 
 .popup {
